--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -35,6 +35,8 @@
 iframe {
     width: 100%;
     height: 100%;
+    /* 需要给iframe上添加一个背景色，要不然和面板同色 */
+    background-color: #f2f3f5;
 }
 
 .layui-body {
